# CoomerDL

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  AGENT_QUICK_START.md  AGENT_VALIDATION_REPORT.md  AI_AGENT_WORKFLOW.md  Aptfile  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  CURRENT_PROGRESS.md  CoomerDL.spec  DEPLOYMENT.md  DEPLOYMENT_GCP.md  DEPLOYMENT_MAP.md  DEVELOPMENT_ROADMAP.md  DEVELOPMENT_ROADMAP_V2.md  Dockerfile  Dockerfile.webapp  FEATURE_VERIFICATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_PROPOSAL.md  LICENSE  NEW_AGENTS_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PHASE1_COMPLETE.txt  PHASE1_IMPLEMENTATION_COMPLETE.md  PHASE3_IMPLEMENTATION.md  POTENTIAL_ISSUES.md  PROXY_SUPPORT_IMPLEMENTATION.md  Procfile  README.md  REFACTORING_SUMMARY.md  RELEASE_GUIDE.md  ROADMAP.md  ROADMAP_COMPLETE.md  ROADMAP_IMPLEMENTATION_COMPLETE.md  ROADMAP_SUMMARY.md  ROADMAP_TASKS_BY_PRIORITY.md  (+27 more)
.gemini/: config.yaml  styleguide.md
.gemini/commands/: optimize.toml  plan.toml  test.toml
.github/: copilot-instructions.md
.github/agents/: ORCHESTRATION.md  PROMPT_OPTIMIZATION.md  README.md  concurrency-expert.agent.md  docs-verifier.agent.md  mcp-integration.md  my-agent.agent.md  performance-optimizer.agent.md  roadmap-manager.agent.md
.github/copilot/: mcp.json
.github/instructions/: tests.instructions.md  ui.instructions.md
.github/mcp/: README.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  release.yml
.idx/: dev.nix
.jules/: bolt.md
.mcp/: config.json
.openhands/microagents/: roadmap_readme_improver.md
app/: about_window.py  cli.py  donors.py  patch_notes.py  progress_manager.py  settings_window.py  sidebar_app.py  ui.py
app/controllers/: __init__.py  download_controller.py  queue_processor.py
app/dialogs/: __init__.py  queue_dialog.py  schedule_dialog.py
app/models/: __init__.py  download_queue.py
app/utils/: batch_analyzer.py  clipboard_monitor.py  converter.py  cookie_helper.py  ffmpeg_check.py  gallerydl_check.py  logging_manager.py
app/window/: __init__.py  action_panel.py  dashboard.py  gallery_viewer.py  history_viewer.py  input_panel.py  log_panel.py  menu_bar.py  options_panel.py  progress_panel.py  status_bar.py
aws/: cloudformation.yaml
azure/: azuredeploy.json
backend/: __init__.py
backend/api/: main.py
backend/config/: settings.py
docs/: DOCUMENTATION_INDEX.md  DOCUMENTATION_REORGANIZATION.md  FEATURE_VERIFICATION_REPORT.md  PROJECT_TIMELINE.md  QUICK_FINDER.md  REORGANIZATION_SUMMARY.md
docs/archive/: IMPLEMENTATION_REPORT.md
docs/development/: API.md  BUILDING.md  BUILD_ANALYSIS.md  MCP_SETUP_GUIDE.md  MISSING_FEATURES.md
docs/implementation/: DASHBOARD_INTEGRATION.md  FEATURE_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_ANALYSIS.md  POTENTIAL_ISSUES.md  WEB_APP_TRANSFORMATION_COMPLETE.md  WINDOWS_EXE_IMPLEMENTATION.md
docs/phases/: PHASE3_VISUAL_GUIDE.md  PHASE4_IMPLEMENTATION.md  PHASE4_SUMMARY.md
docs/planning/: DEVELOPMENT_ROADMAP.md  ROADMAP.md  ROADMAP_STATUS.md  TASKS.md
docs/session_summaries/: SESSION_2026_01_13_SUMMARY.md
docs/user/: FAQ.md  (+3 more)
downloader/: base.py  bunkr.py  downloader.py  erome.py  factory.py  gallery.py  generic.py  history.py  jpg5.py  models.py  policies.py  queue.py  ratelimiter.py  reddit.py  scheduler.py  simpcity.py  throttle.py  universal_scraper.py  ytdlp_adapter.py
frontend/: index.html  package.json  vite.config.ts
scripts/: README.md  add_future_annotations.py  deploy-aws.sh  deploy-azure.sh  deploy-gcp.sh  deploy-heroku.sh  install_linux.sh  test-webapp.sh  validate_workflows.py
tests/: CONTRACTS.md  README.md  __init__.py  conftest.py  test_backend_queue.py  test_base_downloader.py  test_contracts.py  test_dashboard_integration.py  test_download_controller.py  test_download_queue.py  test_downloader.py  test_downloader_features.py  test_factory.py  test_gallery_policies.py  test_job_queue.py  test_phase4_features.py  test_settings.py  test_url_routing.py  test_user_journeys.py  test_utils.py  test_ytdlp_adapter.py
verification/: verify_log_panel.py
(+54 files in other folders)
